--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/vector-icons": "^15.0.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/elements": "^2.6.3",
@@ -22,47 +22,47 @@
     "base-64": "^1.0.0",
     "base64-arraybuffer": "^1.0.2",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~9.2.0",
-    "expo-build-properties": "~0.14.8",
-    "expo-camera": "~16.1.11",
-    "expo-constants": "~17.1.7",
-    "expo-dev-client": "~5.2.4",
-    "expo-font": "~13.3.2",
-    "expo-haptics": "~14.1.4",
-    "expo-image": "~2.4.1",
-    "expo-image-picker": "~16.1.4",
-    "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.7",
-    "expo-secure-store": "~14.2.4",
-    "expo-splash-screen": "~0.30.10",
-    "expo-sqlite": "~15.2.14",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.11",
-    "expo-web-browser": "~14.2.0",
-    "nativewind": "^4.2.1",
+    "eslint-config-expo": "~10.0.0",
+    "expo": "~54.0.13",
+    "expo-build-properties": "~1.0.9",
+    "expo-camera": "~17.0.8",
+    "expo-constants": "~18.0.9",
+    "expo-dev-client": "~6.0.15",
+    "expo-font": "~14.0.9",
+    "expo-haptics": "~15.0.7",
+    "expo-image": "~3.0.9",
+    "expo-image-picker": "~17.0.8",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.12",
+    "expo-secure-store": "~15.0.7",
+    "expo-splash-screen": "~31.0.10",
+    "expo-sqlite": "~16.0.8",
+    "expo-status-bar": "~3.0.8",
+    "expo-symbols": "~1.0.7",
+    "expo-system-ui": "~6.0.7",
+    "expo-web-browser": "~15.0.8",
+    "nativewind": "^2.0.11",
     "postcss": "^8.5.6",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.5",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-calendars": "^1.1313.0",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-heroicons": "^4.0.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
-    "react-native-web": "~0.20.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.0",
     "react-redux": "^9.2.0",
-    "tailwindcss": "^3.4.17",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
-    "@types/react": "^19.2.2",
-    "@types/react-native": "^0.72.8"
+    "@types/react": "~19.1.10",
+    "@types/react-native": "^0.72.8",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
