--- a/app.json
+++ b/app.json
@@ -3,12 +3,12 @@
     "name": "MT Mobil",
     "slug": "MesstechnikMobile",
     "scheme": "mtmobil",
-    "version": "1.1.16",
+    "version": "1.2.16",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/app_icon_or.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/app_icon_or.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
